--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 #S2{
     font-family: sans-serif;
-    color: green;
+    color: #A9A9A9;
     margin-left: 10%;
 } 
 
@@ -37,7 +37,7 @@ body{
     background-color: #F0F8FF;
     font-family: sans-serif;
     font-size: 1em;
-    color: green;
+    color: #008B8B	;
     margin-left: 36%;
     margin-top: 2%;
     justify-content: center;
@@ -45,10 +45,10 @@ body{
 
 /*----------------------*/
 
-input, select, textarea, button {
+input, select, button {
     font-family: sans-serif;
     font-size: 1em;
-    color: forestgreen;
+    color: #008B8B	;
     border-radius: 5px;
 }
 
@@ -73,7 +73,7 @@ input, select, textarea, button {
 
 .campo label {
     margin-bottom: 0.2em;
-    color: green;
+    color: #008B8B	;
     display: block;
 }
 
@@ -86,9 +86,9 @@ fieldset.grupo .campo {
 
 /*----------------------*/
 
-.campo input[type="text"], .campo input[type="email"], .campo select, .campo textarea {
+.campo input[type="text"], .campo input[type="email"], .campo select {
     padding: 0.2em;
-    border: 1px solid turquoise;
+    border: 1px solid gray;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     display: block;
 }
@@ -101,7 +101,7 @@ fieldset.grupo .campo {
 
 /*----------------------*/
 
-.campo input:focus, .campo select:focus, .campo textarea:focus {
+.campo input:focus, .campo select:focus{
     background: #E0E0F8;
 }
 
@@ -109,15 +109,15 @@ fieldset.grupo .campo {
 
 .botao {
     font-size: 1.2em;
-    background: blue;
+    background: #87CEFA;
     border: 0;
     margin-bottom: 1em;
-    color: #ffffff;
+    color: #000000;
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
     position: absolute;
-    top: 90%;
+    top: 45%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
@@ -126,7 +126,7 @@ fieldset.grupo .campo {
 /*----------------------*/
 
 .botao:hover {
-    background: #CCBBFF;
+    background: #0000FF;
     box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: none;
 }
