--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,19 +6,20 @@
 
 /*----------------------*/
 
-#T1 {
+.T1 {
     font-family: sans-serif;
     color: gray;
-    margin-left: 7%;
+    text-align: center;
+    position: absolute;
+    margin-top: -75px;
 } 
+.T2 {
+    font-size: 20px;
+}
 
-/*----------------------*/
-
-#S2{
-    font-family: sans-serif;
-    color: #A9A9A9;
-    margin-left: 10%;
-} 
+.formulario {
+    margin-top: 80px;
+}
 
 /*----------------------*/
 
@@ -77,7 +78,6 @@ input, select, button {
     color: #008B8B	;
     display: block;
 }
-
 /*----------------------*/
 
 fieldset.grupo .campo {
