--- a/assets/css/portal.css
+++ b/assets/css/portal.css
@@ -8,13 +8,14 @@
 
 .T1 {
     font-family: sans-serif;
-    color: gray;
+    color: #D2691E;
     text-align: center;
     position: absolute;
     margin-top: -75px;
 } 
 .T2 {
     font-size: 20px;
+    color: #CD853F;
 }
 
 .formulario {
@@ -25,6 +26,8 @@
 
 #check{
     display: inline-block;
+    color: #FF4500;
+    font-weight: bolder;
 }
 
 /*----------------------*/
@@ -39,22 +42,10 @@ body{
     background-color: #F0F8FF;
     font-family: sans-serif;
     font-size: 1em;
-    color: #008B8B	;
     margin-left: 36%;
     margin-top: 2%;
     justify-content: center;
 }
-
-/*----------------------*/
-
-input, select, button {
-    font-family: sans-serif;
-    font-size: 1em;
-    color: #008B8B	;
-    border-radius: 5px;
-}
-
-/*----------------------*/
 
 .grupo:before, .grupo:after {
     display: table;
@@ -65,48 +56,36 @@ input, select, button {
     clear: both;
 }
 
-/*----------------------*/
-
 .campo {
     margin-bottom: 1em;
 }
 
-/*----------------------*/
-
 .campo label {
     margin-bottom: 0.2em;
-    color: #008B8B	;
+    color: #FF4500	;
     display: block;
 }
-/*----------------------*/
+
 
 fieldset.grupo .campo {
     float:  left;
     margin-right: 1em;
 }
 
-/*----------------------*/
 
-.campo input[type="text"], .campo input[type="email"], .campo select {
+
+.campo input[type="text"], .campo input[type="date"] {
     padding: 0.2em;
-    border: 1px solid gray;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    border: 1px solid rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 2px #1C1C1C;
     display: block;
+    outline: 0;
+    font-family: sans-serif;
+    font-size: 1em;
+    color: 	#1C1C1C;
+    border-radius: 5px;
 }
 
-/*----------------------*/
-
-.campo select option {
-    padding-right: 1em;
-}
-
-/*----------------------*/
-
-.campo input:focus, .campo select:focus{
-    background: #E0E0F8;
-}
-
-/*----------------------*/
 
 .btn-file {
     font-size: 1.2em;
@@ -117,31 +96,17 @@ fieldset.grupo .campo {
 }
 
 #file-upload-button {
-    background-color: #87CEFA !important;
+    background-color: #C8290D !important;
 }
 
-.botao {
-    font-size: 1.2em;
-    background: #87CEFA;
-    border: 0;
-    margin-top: 20px;
-    margin-bottom: 1em;
-    margin-left: 18px;
-    padding: 10px;
-    border-radius: 20px;
-    width: 150px;
-    border-radius: 20px;
-    color: #000000;
-    position: relative;
-    font-weight: bolder;
-}
 
-.card-info {
+#card-info {
     width: 405px;
     height: 180px;
-    background-color: #87CEFA;
+    background-color: #F86910;
     border-radius: 14px;
     font-weight: bolder;
+    box-shadow: 2px 2px 2px #1C1C1C;
 }
 
 .text-descripption {
@@ -157,7 +122,7 @@ input[type='file'] {
 
 .input-wrapper label {
     font-size: 1.2em;
-    background: #87CEFA;
+    background: #F86910;
     border: 0;
     margin-top: 20px;
     margin-bottom: 1em;
@@ -167,25 +132,38 @@ input[type='file'] {
     border-radius: 20px;
     color: #000000;
     position: relative;
-    font-weight: bolder;
+    transition: 1.5s;
+    box-shadow: 2px 2px 2px #1C1C1C;
 }
 
 .input-wrapper label:hover {
-    background-color: #2980b9;
+    background-color: #F53918;
     color: #fff;
     cursor: pointer;
 }
-/*----------------------*/
+
+.botao {
+    font-size: 1.2em;
+    font-family: sans-serif;
+    background: #F86910;
+    border: 0;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 1em;
+    margin-left: 18px;
+    padding: 10px;
+    width: 150px;
+    color: #000000;
+    position: relative;
+    transition: 1.5s;
+    box-shadow: 2px 2px 2px #1C1C1C;
+    cursor: pointer;
+}
+
 
 .botao:hover {
-    background: #2980b9;
-    box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
+    background: #F53918;
+    box-shadow: 2px 2px 2px #1C1C1C;
     text-shadow: none;
     color: #fff;
-}
-
-/*----------------------*/
-
-.botao, select{
-    cursor: pointer;
 }
